@@ -1,3 +1,11 @@
+2002-11-23  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03459] background download when external viewer
+	* etc.c (myExec): added
+		(mySystem): rewrite to use myExec()
+	* file.c (doExternal): run background if BackgroundExtViewer
+	* proto.h (myExec): added
+
 2002-11-23  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* doc/README.mouse_menu: delete column 10 limit
